WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44245
[INTERPRETER] Two tests fail with SputnikError: #1.1: if argArray is neither an array nor an arguments object (see 10.1.8), a TypeError exception is thrown
https://bugs.webkit.org/show_bug.cgi?id=44245
Summary
[INTERPRETER] Two tests fail with SputnikError: #1.1: if argArray is neither ...
David Kilzer (:ddkilzer)
Reported
2010-08-19 04:41:46 PDT
Two Sputnik tests fail on the JSC interpreter with "SputnikError: #1.1: if argArray is neither an array nor an arguments object (see 10.1.8), a TypeError exception is thrown", but pass on the JSC JIT: fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.4/15.3.4.3_Function.prototype.apply/S15.3.4.3_A6_T1.html fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.4/15.3.4.3_Function.prototype.apply/S15.3.4.3_A6_T4.html --- a/LayoutTests/fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.4/15.3.4.3_Function.prototype.apply/S15.3.4.3_A6_T1-expected.txt +++ b/LayoutTests/fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.4/15.3.4.3_Function.prototype.apply/S15.3.4.3_A6_T1-expected.txt @@ -1,6 +1,6 @@ S15.3.4.3_A6_T1 -PASS +FAIL SputnikError: #1.1: if argArray is neither an array nor an arguments object (see 10.1.8), a TypeError exception is thrown TEST COMPLETE --- a/LayoutTests/fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.4/15.3.4.3_Function.prototype.apply/S15.3.4.3_A6_T4-expected.txt +++ b/LayoutTests/fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.4/15.3.4.3_Function.prototype.apply/S15.3.4.3_A6_T4-expected.txt @@ -1,6 +1,6 @@ S15.3.4.3_A6_T4 -PASS +FAIL SputnikError: #1.1: if argArray is neither an array nor an arguments object (see 10.1.8), a TypeError exception is thrown TEST COMPLETE
Attachments
Patch
(1.80 KB, patch)
2010-09-22 12:53 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2010-08-19 04:48:37 PDT
<
rdar://problem/8329003
>
Oliver Hunt
Comment 2
2010-09-22 12:53:45 PDT
Created
attachment 68421
[details]
Patch
WebKit Review Bot
Comment 3
2010-09-22 12:56:19 PDT
Attachment 68421
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 JavaScriptCore/interpreter/Interpreter.cpp:3836: vm_throw is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Oliver Hunt
Comment 4
2010-09-22 13:24:41 PDT
Committed
r68076
: <
http://trac.webkit.org/changeset/68076
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug