2010-09-22  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        [INTERPRETER] Two tests fail with SputnikError: #1.1: if argArray is neither an array nor an arguments object (see 10.1.8), a TypeError exception is thrown
        https://bugs.webkit.org/show_bug.cgi?id=44245

        Remove incorrect code from op_load_varargs in the interpreter.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):

Canonical link: https://commits.webkit.org/58778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68076 268f45cc-cd09-0410-ab3c-d52691b4dbfc